--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <form name="form" onsubmit="return score()">
     <div class="borde">
-      <h4>1- pregunta uno con tres alternativas</h4>
+      <h4>1- pregunta uno con tres alternativas elige la correcta</h4>
       <hr>
       <input type="radio" name="q1" value="a">a- No presentaban visibilidad completa, 24/7
       <hr>
