--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
   </nav>
   <form name="form" onsubmit="return score()">
     <div class="borde">
-      <h4>1- pregunta uno con tres alternativas elige la correcta</h4>
+      <h4>1- ¿En qué año se adopta SIRGAS?</h4>
       <hr>
-      <input type="radio" name="q1" value="a">a- No presentaban visibilidad completa, 24/7
+      <input type="radio" name="q1" value="a">a- año de implementación 2003
       <hr>
-      <input type="radio" name="q1" value="b">b- No presentaban cobertura global, al no considerar a Rusia
+      <input type="radio" name="q1" value="b">b- año de adopción 2000
       <hr>
-      <input type="radio" name="q1" value="c">c- a y b son correctas
-      <hr>
-      <input type="radio" name="q1" value="d">d- sólo b
+      <input type="radio" name="q1" value="c">c- año de implementación 2013
     </div>
     <div class="borde">
       <h4>2- ¿Cúales son las clasificaciones del Posicionamiento por Satélite?</h4>
