--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
       <input type="radio" name="q1" value="c">c- año de implementación 2013
     </div>
     <div class="borde">
-      <h4>2- ¿Cúales son las clasificaciones del Posicionamiento por Satélite?</h4>
+      <h4>2- ¿Cómo se orientaban las antiguas triangulaciones geodésicas?</h4>
       <hr>
-      <input type="radio" name="q2" value="a">a- Tipo observación, N° receptores, Movimiento receptor y Obtencion
-      resultados
+      <input type="radio" name="q2" value="a">a- Se orientaban con Puntos Laplace
       <hr>
-      <input type="radio" name="q2" value="b">b- Tipo observable, N° receptores, Movimiento receptor, Obtencion
-      resultados y Objetivo
+      <input type="radio" name="q2" value="b">b- Se calculaba la desviación de la vertical, con la diferencia de latitud geodésica -normal al elipsoide- y latitud astronómica -normal al geoide-
       <hr>
-      <input type="radio" name="q2" value="c">c- N° receptores, Movimiento colector, Obtención resultados y Objetivo
+      <input type="radio" name="q2" value="c">c- a y b son correctas
     </div>
     <div class="borde">
       <h4>3- ¿Cúales son las constelaciones GNSS y a qué gobierno pertenecen?</h4>
