--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       <input type="radio" name="q2" value="b">b- Se calculaba la desviación de la vertical, con la diferencia de latitud geodésica -normal al elipsoide- y latitud astronómica -normal al geoide-
       <hr>
       <input type="radio" name="q2" value="c">c- a y b son correctas
+      <hr>
+      <input type="radio" name="q2" value="d">c- sólo b es correcta
     </div>
     <div class="borde">
       <h4>3- ¿Cúales son las constelaciones GNSS y a qué gobierno pertenecen?</h4>
