--- a/index.html
+++ b/index.html
@@ -40,25 +40,23 @@
       <input type="radio" name="q2" value="d">c- sólo b es correcta
     </div>
     <div class="borde">
-      <h4>3- ¿Cúales son las constelaciones GNSS y a qué gobierno pertenecen?</h4>
+      <h4>3- ¿Cúal era el principal problema de las triangulaciones?</h4>
       <hr>
-      <input type="radio" name="q3" value="a">a- GPS-USA, Glonass-Rusia y Beidu-Japón
+      <input type="radio" name="q3" value="a">a- Se hacían observaciones a estrellas seleccionadas para determinar la posición de ese punto sobre la superficie de la tierra<hr>
+      <input type="radio" name="q3" value="b">b- Desde las posiciones astronómicas se podría tener un error de cientos de metros
       <hr>
-      <input type="radio" name="q3" value="b">b- GPS-USA, Glonas-Europa y Galileo-Rusia
+      <input type="radio" name="q3" value="c">c- Cada continente estaba virtualmente -posicionalmente- aislado y su interrelación se conocía de manera imprecisa
       <hr>
-      <input type="radio" name="q3" value="c">c- GPS-USA, Glonass-Rusia, Galileo-Europa y Beidou-China
+      <input type="radio" name="q4" value="d">c- a, b y c son correctas
     </div>
     <div class="borde">
-      <h4>4- ¿Cúales son los tipos de Órbitas Satelitales?</h4>
+      <h4>4- ¿Es posible realizar mediciones de Fase con el Receptor y la Antena?</h4>
       <hr>
-      <input type="radio" name="q4" value="a">a- LEO: Lower Earth Orbit, MEO: Middle Earth Orbit, GEO: Geoide Earth
-      Orbital e IGSO: Inclined Gravitational Satelite Orbit
+      <input type="radio" name="q4" value="a">a- Con el Receptor se puede, el Receptor provee de Código y Fase
       <hr>
-      <input type="radio" name="q4" value="b">b- MEO: Middle Earth Orbit, GEO: Geodesic Earth Orbit, ISO: Inclined
-      Spatial Orbit y HEO: High Earth Orbital
+      <input type="radio" name="q4" value="b">b- No se pueden realizar mediciones de Fase con el Receptor y la Antena
       <hr>
-      <input type="radio" name="q4" value="c">c- LEO: Low Earth Orbit, MEO: Medium Earth Orbit, GEO: Geostationary Earth
-      Orbit, IGSO: Inclined Geo Synchronous Orbit y HEO: High Earth Orbit
+      <input type="radio" name="q4" value="c">c- Con la Antena se puede, el Receptor entrega Código y la Antena provee de Observable de Fase al Receptor
     </div>
     <div class="borde">
       <h4>5- ¿Cúales son los segmentos GNSS?</h4>
