--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <input type="radio" name="q4" value="c">c- Con la Antena se puede, el Receptor entrega Código y la Antena provee de Observable de Fase al Receptor
     </div>
     <div class="borde">
-      <h4>5- ¿Cúales son los segmentos GNSS?</h4>
+      <h4>5- ¿Para qué se emplearon inicialmente los satélites de GIOVE?</h4>
       <input type="radio" name="q5" value="a">a- Segmento Espacial y Segmento Usuario
       <hr>
       <input type="radio" name="q5" value="b">b- Segmento Espacial, Segmento de Control y Segmento Usuario
@@ -67,7 +67,7 @@
       <input type="radio" name="q5" value="c">c- Segmento Espacial, Segmento de Control y Segmento Terrestre
     </div>
     <div class="borde">
-      <h4>6- ¿En qué año y bloque GPS se añade la señal L5?</h4>
+      <h4>6- ¿Cúales son las Longitudes de Onda expresadas en centímetros de las Frecuencias L1 y L2?</h4>
       <hr>
       <input type="radio" name="q6" value="a">a- Bloque II, año 2010
       <hr>
@@ -76,7 +76,7 @@
       <input type="radio" name="q6" value="c">c- Bloque II, año 2000
     </div>
     <div class="borde">
-      <h4>7- ¿En qué año se prevee que BEIDOU entrará en FOC "Full Operational Capability"?</h4>
+      <h4>7- ¿En qué Época se inicia el tiempo GPS?</h4>
       <hr>
       <input type="radio" name="q7" value="a">a- En el año 2022
       <hr>
@@ -85,7 +85,7 @@
       <input type="radio" name="q7" value="c">c- En el año 2020
     </div>
     <div class="borde">
-      <h4>8- ¿Cúales son las Efemérides?</h4>
+      <h4>8- ¿Se puede realizar una Planificación GNSS de horizonte GNSS sin acceso alguno a internet en toda la Fase de Planificación?</h4>
       <hr>
       <input type="radio" name="q8" value="a">a- Efemérides Transmitidas y Efemérides Precisas
       <hr>
@@ -94,7 +94,7 @@
       <input type="radio" name="q8" value="c">c- Sólo Almanaque
     </div>
     <div class="borde">
-      <h4>9- ¿Cúales son los elementos básicos de un receptor GNSS genérico?</h4>
+      <h4>9- ¿Cómo se realiza la comunicación de un Receptor GNSS Trimble R8 con el Segmento Espacial GNSS?</h4>
       <hr>
       <input type="radio" name="q9" value="a">a- Antena, Microprocesador, Memoria y Colectora
       <hr>
@@ -104,7 +104,7 @@
       <input type="radio" name="q9" value="c">c- Base y Colectora
     </div>
     <div class="borde">
-      <h4>10- ¿Cúal es la diferencia entre Sistema de Referencia y Marco de Referencia?</h4>
+      <h4>10- ¿En qué caso se puede plantear una Transformación Helmert 3D sin perder precisión?</h4>
       <hr>
       <input type="radio" name="q10" value="a">a- Sistema de Referencia: Parámetros que definen un sistema coordenado
       para ubicar un punto y Marco de Referencia: Materialización del sistema de referencia
@@ -115,7 +115,7 @@
       <input type="radio" name="q10" value="c">c- Sistema de Referencia es sinónimo de Marco de Referencia
     </div>
     <div class="borde">
-      <h4>11- ¿Qué significa RTK?</h4>
+      <h4>11- ¿En qué magnitud vienen expresadas las medidas de Fase L1 y L2 en el archivo RINEX?</h4>
       <hr>
       <input type="radio" name="q11" value="a">a- "Real Time Kinematic": Medidas de fase en relativo, por
       posicionamiento cinemático, en tiempo real para topografía
@@ -127,7 +127,7 @@
       para Geomensura
     </div>
     <div class="borde">
-      <h4>12- ¿Cúales son los principales componentes de una señal GPS?</h4>
+      <h4>12- ¿Cúales son los tipos de archivos RINEX que tiene vigente el IGS en la versión 3.03 Rinex?</h4>
       <hr>
       <input type="radio" name="q12" value="a">a- Colectora y Fase
       <hr>
@@ -136,7 +136,7 @@
       <input type="radio" name="q12" value="c">c- Portadora, Código y Datos de Navegación
     </div>
     <div class="borde">
-      <h4>13- ¿Cúales son las metodologías de observación con que se calculan las soluciones ITRF y cómo se integran?
+      <h4>13- ¿Se puede editar un archivo .T00 y un archivo .17o?
       </h4>
       <hr>
       <input type="radio" name="q13" value="a">a- GNSS, VLBI y QZSS, son integradas por el ITRF
@@ -146,7 +146,7 @@
       <input type="radio" name="q13" value="c">c- GPS, VLBI, LLR, SLR y DORIS, son integradas a través de local TIE
     </div>
     <div class="borde">
-      <h4>14- ¿Cúales son los bloques de la constelación GPS?</h4>
+      <h4>14- ¿Cómo se realiza la transformación de PZ90 a IGS84?</h4>
       <hr>
       <input type="radio" name="q14" value="a">a- Bloques: I, II, IIA, IIR, IIR-F, III y III-F
       <hr>
@@ -155,258 +155,6 @@
       <input type="radio" name="q14" value="c">c- Son constelaciones de la I a la VIII
     </div>
     <div class="borde">
-      <h4>15- ¿Cúales son las principales fuentes de error GNSS?</h4>
-      <hr>
-      <input type="radio" name="q15" value="a">a- Satélite, Medio de Propagación de la Señal y Receptor
-      <hr>
-      <input type="radio" name="q15" value="b">b- Satélite, Señal y CORS
-      <hr>
-      <input type="radio" name="q15" value="c">c- Segmento Espacial, Reflexión y Reflaxión
-    </div>
-    <div class="borde">
-      <h4>16- ¿En qué fecha y qué organismo cambia de correcciones relativas a correcciones absolutas de antena?</h4>
-      <hr>
-      <input type="radio" name="q16" value="a">a- El 15 de Diciembre de 2016 el IGS pasa de correcciones relativas a
-      correcciones absolutas del centro de base
-      <hr>
-      <input type="radio" name="q16" value="b">b- El 5 de Noviembre de 2006 el IGS pasa de correcciones relativas a
-      correcciones absolutas del centro de fase de antena
-      <hr>
-      <input type="radio" name="q16" value="c">c- El 5 de Noviembre de 2006 SIRGAS pasa de correcciones absolutas a
-      correcciones relativas del centro de control internacional
-    </div>
-    <div class="borde">
-      <h4>17- ¿Cúales son los componentes de la órbita GNSS?</h4>
-      <hr>
-      <input type="radio" name="q17" value="a">a- a:Anomalias Excéntricas, r:Pseudodistancias y S:Semiejes
-      <hr>
-      <input type="radio" name="q17" value="b">b- b:Semieje mayor, r:Pseudodistancia, E:Anomalía Excéntrica, V:Anomalía
-      Verdadera y a:Semieje mayor
-      <hr>
-      <input type="radio" name="q17" value="c">c- o:Orbita, t:Tierra, s:Satélite y w:Perineo
-    </div>
-    <div class="borde">
-      <h4>18- ¿Cúales son los tipos de errores atmosféricos que afectan a las observaciones GNSS?</h4>
-      <hr>
-      <input type="radio" name="q18" value="a">a- Retraso Ionosférico y Retraso Estratosférico
-      <hr>
-      <input type="radio" name="q18" value="b">b- T.E.C.K. y MultyPath
-      <hr>
-      <input type="radio" name="q18" value="c">c- Retardo Ionosférico y Retardo Troposférico
-    </div>
-    <div class="borde">
-      <h4>19- ¿Porqué influye el empleo de equipos multiconstelación en la calidad y tiempo de observación, en una
-        planificación Geodésica con equipo GPS?</h4>
-      <hr>
-      <input type="radio" name="q19" value="a">a- Al agregar otra constelación al ejecutar una planificación y observar
-      los gráficos GDOP y números de satélites, es posible concluir el mejor momento para realizar la observación
-      <hr>
-      <input type="radio" name="q19" value="b">b- Influyen en la calidad de los datos y tiempos de observación; los
-      valores de los gráficos GDOP mejoran y aumentan positivamente
-      <hr>
-      <input type="radio" name="q19" value="c">c- a y b son correctas
-      <hr>
-      <input type="radio" name="q19" value="d">c- sólo b
-    </div>
-    <div class="borde">
-      <h4>20- ¿Cómo se clasifica el Posicionamiento por Satélite según "Tipo de Observable"?</h4>
-      <hr>
-      <input type="radio" name="q20" value="a">a- Pseudodistancia de Código y Pseudodistancia de Fase
-      <hr>
-      <input type="radio" name="q20" value="b">b- Posicionamiento Relativo y Posicionamiento Absoluto
-      <hr>
-      <input type="radio" name="q20" value="c">c- Estático y Cinemático
-    </div>
-    <div class="borde">
-      <h4>21- ¿Cómo se clasifica el Posicionamiento por Satélite según "N° de Receptores"?</h4>
-      <hr>
-      <input type="radio" name="q21" value="a">a- Pseudodistancia de Código y Pseudodistancia de Fase
-      <hr>
-      <input type="radio" name="q21" value="b">b- Posicionamiento Relativo y Posicionamiento Absoluto
-      <hr>
-      <input type="radio" name="q21" value="c">c- Tiempo Real y Postproceso
-    </div>
-    <div class="borde">
-      <h4>22- ¿Cómo se clasifica el Posicionamiento por Satélite según "Movimiento del Receptor"?</h4>
-      <hr>
-      <input type="radio" name="q22" value="a">a- Topografía y Navegación
-      <hr>
-      <input type="radio" name="q22" value="b">b- Posicionamiento Relativo y Posicionamiento Absoluto
-      <hr>
-      <input type="radio" name="q22" value="c">c- Estático y Cinemático
-    </div>
-    <div class="borde">
-      <h4>23- ¿Cómo se clasifica el Posicionamiento por Satélite según "Obtención de Resultados"?</h4>
-      <hr>
-      <input type="radio" name="q23" value="a">a- Tiempo Real y Procesamiento
-      <hr>
-      <input type="radio" name="q23" value="b">b- Posicionamiento Relativo y Absoluto
-      <hr>
-      <input type="radio" name="q23" value="c">c- Tiempo Real y Postproceso
-    </div>
-    <div class="borde">
-      <h4>24- ¿Cómo se clasifica el Posicionamiento por Satélite según "Objetivo"?</h4>
-      <hr>
-      <input type="radio" name="q24" value="a">a- Topografía y Geodesia
-      <hr>
-      <input type="radio" name="q24" value="b">b- Topografía y Navegación
-      <hr>
-      <input type="radio" name="q24" value="c">c- Particular y Específico
-    </div>
-    <div class="borde">
-      <h4>25- ¿Cúales son las funciones del "Segmento Espacial"?</h4>
-      <hr>
-      <input type="radio" name="q25" value="a">a- Genera y transmite las señales de código y fase
-      <hr>
-      <input type="radio" name="q25" value="b">b- Almacena y envía el mensaje de navegación actualizado
-      <hr>
-      <input type="radio" name="q25" value="c">c- a y b son correctas
-      <hr>
-      <input type="radio" name="q25" value="d">d- sólo a es correcta
-    </div>
-    <div class="borde">
-      <h4>26- ¿Cúales son las funciones del "Segmento de Control"?</h4>
-      <hr>
-      <input type="radio" name="q26" value="a">a- Mantiene las constelaciones y escala de tiempo
-      <hr>
-      <input type="radio" name="q26" value="b">b- Predice efemérides y evolución del reloj
-      <hr>
-      <input type="radio" name="q26" value="c">c- Actualiza el mensaje de navegación
-      <hr>
-      <input type="radio" name="q26" value="d">d- a,b y c son correctas
-    </div>
-    <div class="borde">
-      <h4>27- ¿Cómo definiría "Efemérides"?</h4>
-      <hr>
-      <input type="radio" name="q27" value="a">a- Tipos de datos para la determinación de vectores de posición y
-      velocidad de los satélites en un sistema de referencia terrestre en cualquier instante
-      <hr>
-      <input type="radio" name="q27" value="b">b- Es una bitácora del viaje de las naves
-      <hr>
-      <input type="radio" name="q27" value="c">c- Son las orbitas satelitales en el tiempo universal UTF
-    </div>
-    <div class="borde">
-      <h4>28- ¿Qué es el "Almanaque"?</h4>
-      <hr>
-      <input type="radio" name="q28" value="a">a- Es una Predicción usada para planificación
-      <hr>
-      <input type="radio" name="q28" value="b">b- Tiene una Incertidumbre de algunos kms debido a la edad de los datos
-      <hr>
-      <input type="radio" name="q28" value="c">c- a y b son correctas
-      <hr>
-      <input type="radio" name="q28" value="d">d- sólo b es correcta
-    </div>
-    <div class="borde">
-      <h4>29- ¿Qué son las "Efemérides Transmitidas"?</h4>
-      <hr>
-      <input type="radio" name="q29" value="a">a- Son los Datos que llegan al receptor
-      <hr>
-      <input type="radio" name="q29" value="b">b- Tiene una Incertidumbre de 1m o mejor
-      <hr>
-      <input type="radio" name="q29" value="c">c- a y b son correctas
-      <hr>
-      <input type="radio" name="q29" value="d">d- Son los datos finales que se envian a control
-    </div>
-    <div class="borde">
-      <h4>30- ¿Qué son las "Efemérides Precisas"?</h4>
-      <hr>
-      <input type="radio" name="q30" value="a">a- Son los Datos reales de dónde estuvo el satélite en una zona x
-      <hr>
-      <input type="radio" name="q30" value="b">b- Tiene una Incertidumbre de 0,05m a 0,20m *según IGS 2,5cm dependiendo
-      de la latencia, retardo temporal
-      <hr>
-      <input type="radio" name="q30" value="c">c- Son los datos procesados por SIRGAS y publicados diariamente
-      <hr>
-      <input type="radio" name="q30" value="d">d- a y b son correctas
-    </div>
-    <div class="borde">
-      <h4>31- ¿Defina el componente de la Señal GPS, "Portadora"?</h4>
-      <hr>
-      <input type="radio" name="q31" value="a">a- Es una Señal de radiofrecuencia sinusoidal
-      <hr>
-      <input type="radio" name="q31" value="b">b- Es una secuencia 0 y 1 que permite determinar el tiempo de viaje de la
-      señal
-      <hr>
-      <input type="radio" name="q31" value="c">c- Es una Señal de radiofrecuencia binaria
-    </div>
-    <div class="borde">
-      <h4>32- ¿Defina el componente de la Señal GPS, "Código"?</h4>
-      <hr>
-      <input type="radio" name="q32" value="a">a- Es un Mensaje de código binario que entrega información sobre las
-      efemérides del satélite
-      <hr>
-      <input type="radio" name="q32" value="b">b- Es una secuencia 0 y 1 que permite determinar el tiempo de viaje de la
-      señal
-      <hr>
-      <input type="radio" name="q32" value="c">c- Es una Señal de doble radiofrecuencia L2
-    </div>
-    <div class="borde">
-      <h4>33- ¿Defina el componente de la Señal GPS, "Datos de Navegación"?</h4>
-      <hr>
-      <input type="radio" name="q33" value="a">a- Es una Señal de radiofrecuencia sinusoidal VLBI
-      <hr>
-      <input type="radio" name="q33" value="b">b- Es una metodología de observación integrada por local TAI
-      <hr>
-      <input type="radio" name="q33" value="c">c- Es un Mensaje de código binario que entrega información sobre las
-      efemérides del satélite
-    </div>
-    <div class="borde">
-      <h4>34- ¿Cúales son los efectos de la fuente de error GNSS, "Satélite"?</h4>
-      <hr>
-      <input type="radio" name="q34" value="a">a- Desviación del reloj
-      <hr>
-      <input type="radio" name="q34" value="b">b- Error Orbital
-      <hr>
-      <input type="radio" name="q34" value="c">c- a y b son correctas
-      <hr>
-      <input type="radio" name="q34" value="d">d- sólo b es correcta
-    </div>
-    <div class="borde">
-      <h4>35- ¿Cúales son los efectos de la fuente de error GNSS, "Medio de Propagación de la Señal"?</h4>
-      <hr>
-      <input type="radio" name="q35" value="a">a- Refracción Troposfera
-      <hr>
-      <input type="radio" name="q35" value="b">b- Refracción Ionósfera
-      <hr>
-      <input type="radio" name="q35" value="c">c- a y b son correctas
-      <hr>
-      <input type="radio" name="q35" value="d">d- sólo b es correcta
-    </div>
-    <div class="borde">
-      <h4>36- ¿Cúales son los efectos de la fuente de error GNSS, "Receptor"?</h4>
-      <hr>
-      <input type="radio" name="q36" value="a">a- Desviación reloj
-      <hr>
-      <input type="radio" name="q36" value="b">b- Variación APC (Centro de fase de la antena)
-      <hr>
-      <input type="radio" name="q36" value="c">c- Multipath
-      <hr>
-      <input type="radio" name="q36" value="d">c- a, b y c son correctas
-      <hr>
-      <input type="radio" name="q36" value="e">e- sólo b y c son correctas
-    </div>
-    <div class="borde">
-      <h4>37- ¿Qué es el "Retardo Ionosférico" y Cómo afecta a las observaciones GNSS?</h4>
-      <hr>
-      <input type="radio" name="q37" value="a">a- Es un Retardo de la señal electromagnética GNSS que se genera en la
-      Ionósfera (capa de la atmósfera)
-      <hr>
-      <input type="radio" name="q37" value="b">b- La velocidad de la propagación de la señal depende del contenido total
-      de electrones (TEC)
-      <hr>
-      <input type="radio" name="q37" value="c">c- a y b son correctas
-    </div>
-    <div class="borde">
-      <h4>38- ¿Qué es el "Retardo Troposférico" y Cómo afecta a las observaciones GNSS?</h4>
-      <hr>
-      <input type="radio" name="q38" value="a">a- Efecto de la Tropósfera en las señales GNSS aparece como retardo en el
-      viaje de la señal del satélite al receptor
-      <hr>
-      <input type="radio" name="q38" value="b">b- Depende de la altura, presión, humedad y ubicación geográfica de la
-      antena
-      <hr>
-      <input type="radio" name="q38" value="c">c- a y b son correctas
-    </div>
     <br>
     <input type="submit" id="sendA" value="Ver Puntaje">
     <p id="rada"></p>
