--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
   <title>SELECCIÓN MULTIPLE</title>
+
+  <nav>
+    <h1>Escoge una alternativa y revisa tu puntaje al final</h1>
+  </nav>
   
   <!-- Required meta tags -->
   <meta charset="utf-8">
