--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>SELECCIÓN MULTIPLE</title>
+  <title>SELECCIÓN MULTIPLE 2</title>
 
   <nav>
     <h1>Escoge una alternativa y revisa tu puntaje al final</h1>
