--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>SELECCIÓN MULTIPLE 2</title>
+  <title>SELECCIÓN MULTIPLE</title>
 
   <nav>
     <h1>Escoge una alternativa y revisa tu puntaje al final</h1>
@@ -59,99 +59,96 @@
     </div>
     <div class="borde">
       <h4>5- ¿Para qué se emplearon inicialmente los satélites de GIOVE?</h4>
-      <input type="radio" name="q5" value="a">a- Segmento Espacial y Segmento Usuario
+      <input type="radio" name="q5" value="a">a- Asegurar y mantener la frecuencia GALILEO con la Unión Internacional de Telecomunicaciones "ITU"
       <hr>
-      <input type="radio" name="q5" value="b">b- Segmento Espacial, Segmento de Control y Segmento Usuario
+      <input type="radio" name="q5" value="b">b- Validar las tecnologías que empleará la constelación GALILEO
       <hr>
-      <input type="radio" name="q5" value="c">c- Segmento Espacial, Segmento de Control y Segmento Terrestre
+      <input type="radio" name="q5" value="c">c- Monitorear el entorno "MEO"
+      <hr>
+      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario. Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita y Asegurar los objetivos de la misión, y ambos proporcionar Capacidades complementarias.
+      <hr>
+      <input type="radio" name="q5" value="e">e- Todas las alternativas son correctas 
     </div>
     <div class="borde">
       <h4>6- ¿Cúales son las Longitudes de Onda expresadas en centímetros de las Frecuencias L1 y L2?</h4>
       <hr>
-      <input type="radio" name="q6" value="a">a- Bloque II, año 2010
+      <input type="radio" name="q6" value="a">a- L1 y L2 = 24cm
       <hr>
-      <input type="radio" name="q6" value="b">b- Bloque III, año 2010
+      <input type="radio" name="q6" value="b">b- L1= 24cm y L2= 19cm
       <hr>
-      <input type="radio" name="q6" value="c">c- Bloque II, año 2000
+      <input type="radio" name="q6" value="c">c- L1= 19cm y L2= 24cm
     </div>
     <div class="borde">
-      <h4>7- ¿En qué Época se inicia el tiempo GPS?</h4>
+      <h4>7- ¿En qué Época se inició el tiempo GPS?</h4>
       <hr>
-      <input type="radio" name="q7" value="a">a- En el año 2022
+      <input type="radio" name="q7" value="a">a- El tiempo GPS inicia el 5 de Enero de 1988
       <hr>
-      <input type="radio" name="q7" value="b">b- En el año 2021
+      <input type="radio" name="q7" value="b">b- El tiempo GPS inició el 5 y 6 de Enero de 1980
       <hr>
-      <input type="radio" name="q7" value="c">c- En el año 2020
+      <input type="radio" name="q7" value="c">c- Inició el 6 de Febrero del año 1980 a la medianoche
     </div>
     <div class="borde">
       <h4>8- ¿Se puede realizar una Planificación GNSS de horizonte GNSS sin acceso alguno a internet en toda la Fase de Planificación?</h4>
       <hr>
-      <input type="radio" name="q8" value="a">a- Efemérides Transmitidas y Efemérides Precisas
+      <input type="radio" name="q8" value="a">a- Si claro, se saca el Receptor y se actualiza y descarga el Almanaque
       <hr>
-      <input type="radio" name="q8" value="b">b- Almanaque, Efemérides Transmitidas y Efemérides Precisas
+      <input type="radio" name="q8" value="b">b- Es posible mediante el uso de la Antena y descargando efemérides ultrarápidas
       <hr>
-      <input type="radio" name="q8" value="c">c- Sólo Almanaque
+      <input type="radio" name="q8" value="c">c- No es posible realizar una planificación GPS sin internet
     </div>
     <div class="borde">
       <h4>9- ¿Cómo se realiza la comunicación de un Receptor GNSS Trimble R8 con el Segmento Espacial GNSS?</h4>
       <hr>
-      <input type="radio" name="q9" value="a">a- Antena, Microprocesador, Memoria y Colectora
+      <input type="radio" name="q9" value="a">a- El Segmento Espacial se comunica con la Antena CORS
       <hr>
-      <input type="radio" name="q9" value="b">b- Memoria, Interfaz de usuarios, Fuente de alimentación, Oscilador,
-      Sección de radiofrecuencia, Antena,
+      <input type="radio" name="q9" value="b">b- El receptor GNSS nunca se comunica con el Segmento Espacial T
       <hr>
-      <input type="radio" name="q9" value="c">c- Base y Colectora
+      <input type="radio" name="q9" value="c">c- El Segmento Espacial se comunica con el Receptor GPS
     </div>
     <div class="borde">
       <h4>10- ¿En qué caso se puede plantear una Transformación Helmert 3D sin perder precisión?</h4>
       <hr>
-      <input type="radio" name="q10" value="a">a- Sistema de Referencia: Parámetros que definen un sistema coordenado
-      para ubicar un punto y Marco de Referencia: Materialización del sistema de referencia
+      <input type="radio" name="q10" value="a">a- No es posible realizar una Transformación Helmert 3D, ésto es competencia de SIRGAS
       <hr>
-      <input type="radio" name="q10" value="b">b- Sistema de Referencia: Sistema coordenado para definir un punto y
-      Marco de Referencia: Sistema de Referencia materializado
+      <input type="radio" name="q10" value="b">b- Siempre que se cuente con las efemérides ultraprecisas
       <hr>
-      <input type="radio" name="q10" value="c">c- Sistema de Referencia es sinónimo de Marco de Referencia
+      <input type="radio" name="q10" value="c">c- Única y exclusivamente en cambios de ITRF
     </div>
     <div class="borde">
       <h4>11- ¿En qué magnitud vienen expresadas las medidas de Fase L1 y L2 en el archivo RINEX?</h4>
       <hr>
-      <input type="radio" name="q11" value="a">a- "Real Time Kinematic": Medidas de fase en relativo, por
-      posicionamiento cinemático, en tiempo real para topografía
+      <input type="radio" name="q11" value="a">a- En metros de ondas sinusoides
       <hr>
-      <input type="radio" name="q11" value="b">b- "Real Timing Kinematic: Medidas de código en absoluto, por
-      posicionamiento cinemático, en tiempo real para navegación
+      <input type="radio" name="q11" value="b">b- No vienen en Fase, vienen en Ciclos
       <hr>
-      <input type="radio" name="q11" value="c">c- "Real Time Kinemating": Medidas de fase en relativo en tiempo actual
-      para Geomensura
+      <input type="radio" name="q11" value="c">c- En centímetros de acuerdo al filtro de protones atmosféricos
     </div>
     <div class="borde">
       <h4>12- ¿Cúales son los tipos de archivos RINEX que tiene vigente el IGS en la versión 3.03 Rinex?</h4>
       <hr>
-      <input type="radio" name="q12" value="a">a- Colectora y Fase
+      <input type="radio" name="q12" value="a">a- Topografía, Espacial, Observable
+      <input type="radio" name="q12" value="b">b- Navegación, Estándar de calidad, Meteorológico, Observación
       <hr>
-      <input type="radio" name="q12" value="b">b- Portadora, Código y Fase
-      <hr>
-      <input type="radio" name="q12" value="c">c- Portadora, Código y Datos de Navegación
+      <input type="radio" name="q12" value="c">c- a y b son correctas
     </div>
     <div class="borde">
       <h4>13- ¿Se puede editar un archivo .T00 y un archivo .17o?
       </h4>
       <hr>
-      <input type="radio" name="q13" value="a">a- GNSS, VLBI y QZSS, son integradas por el ITRF
+      <input type="radio" name="q13" value="a">a- Porsupuesto, ambos archivos son editables con TVC
       <hr>
-      <input type="radio" name="q13" value="b">b- GNSS, VLBI, LLS y DORIS, se integran por protocolo TEI
+      <input type="radio" name="q13" value="b">b- Sólo el .17o que es un archivo RINEX
       <hr>
-      <input type="radio" name="q13" value="c">c- GPS, VLBI, LLR, SLR y DORIS, son integradas a través de local TIE
+      <input type="radio" name="q13" value="c">c- Sólo el .T00 porque el otro es binario
     </div>
     <div class="borde">
       <h4>14- ¿Cómo se realiza la transformación de PZ90 a IGS84?</h4>
       <hr>
-      <input type="radio" name="q14" value="a">a- Bloques: I, II, IIA, IIR, IIR-F, III y III-F
+      <input type="radio" name="q14" value="a">a- Con una Helmert 3D
       <hr>
-      <input type="radio" name="q14" value="b">b- Bloques: I, II, IIA, IIR, IIR-M, IIF y III
+      <input type="radio" name="q14" value="b">b- Por el método de Mínimos Cuadrados
       <hr>
-      <input type="radio" name="q14" value="c">c- Son constelaciones de la I a la VIII
+      <input type="radio" name="q14" value="c">c- Por el software científico BERNESSE y es competencia de UNABCO
     </div>
     <br>
     <input type="submit" id="sendA" value="Ver Puntaje">
