--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <hr>
       <input type="radio" name="q2" value="a">a- Se orientaban con Puntos Laplace
       <hr>
-      <input type="radio" name="q2" value="b">b- Se calculaba la desviación de la vertical, con la diferencia de latitud geodésica -normal al elipsoide- y latitud astronómica -normal al geoide-
+      <input type="radio" name="q2" value="b">b- Se calculaba la desviación de la vertical, con la diferencia de latitud geodésica "normal al elipsoide" y latitud astronómica "normal al geoide"
       <hr>
       <input type="radio" name="q2" value="c">c- a y b son correctas
       <hr>
@@ -44,9 +44,9 @@
       <input type="radio" name="q3" value="a">a- Se hacían observaciones a estrellas seleccionadas para determinar la posición de ese punto sobre la superficie de la tierra<hr>
       <input type="radio" name="q3" value="b">b- Desde las posiciones astronómicas se podría tener un error de cientos de metros
       <hr>
-      <input type="radio" name="q3" value="c">c- Cada continente estaba virtualmente -posicionalmente- aislado y su interrelación se conocía de manera imprecisa
+      <input type="radio" name="q3" value="c">c- Cada continente estaba virtualmente "posicionalmente" aislado y su interrelación se conocía de manera imprecisa
       <hr>
-      <input type="radio" name="q4" value="d">c- a, b y c son correctas
+      <input type="radio" name="q4" value="d">d- Todas las alternativas son correctas
     </div>
     <div class="borde">
       <h4>4- ¿Es posible realizar mediciones de Fase con el Receptor y la Antena?</h4>
@@ -58,7 +58,7 @@
       <input type="radio" name="q4" value="c">c- Con la Antena se puede, el Receptor entrega Código y la Antena provee de Observable de Fase al Receptor
     </div>
     <div class="borde">
-      <h4>5- ¿Para qué se emplearon inicialmente los satélites de GIOVE?</h4>
+      <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIAOVE-A y GIOVE-B "Galileo In-Orbit Validation, ¿Cúal fúe el porpósito de su misión?</h4>
       <input type="radio" name="q5" value="a">a- Asegurar y mantener la frecuencia GALILEO con la Unión Internacional de Telecomunicaciones "ITU"
       <hr>
       <input type="radio" name="q5" value="b">b- Validar las tecnologías que empleará la constelación GALILEO
@@ -127,6 +127,7 @@
       <h4>12- ¿Cúales son los tipos de archivos RINEX que tiene vigente el IGS en la versión 3.03 Rinex?</h4>
       <hr>
       <input type="radio" name="q12" value="a">a- Topografía, Espacial, Observable
+      <hr>
       <input type="radio" name="q12" value="b">b- Navegación, Estándar de calidad, Meteorológico, Observación
       <hr>
       <input type="radio" name="q12" value="c">c- a y b son correctas
