--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
       <input type="radio" name="q2" value="b">b- Se calculaba la desviación de la vertical, con la diferencia de latitud geodésica "normal al elipsoide" y latitud astronómica "normal al geoide"
       <hr>
       <input type="radio" name="q2" value="c">c- a y b son correctas
-      <hr>
-      <input type="radio" name="q2" value="d">c- sólo b es correcta
     </div>
     <div class="borde">
       <h4>3- ¿Cúal era el principal problema de las triangulaciones?</h4>
@@ -46,7 +44,7 @@
       <hr>
       <input type="radio" name="q3" value="c">c- Cada continente estaba virtualmente "posicionalmente" aislado y su interrelación se conocía de manera imprecisa
       <hr>
-      <input type="radio" name="q4" value="d">d- Todas las alternativas son correctas
+      <input type="radio" name="q3" value="d">d- Todas las alternativas son correctas
     </div>
     <div class="borde">
       <h4>4- ¿Es posible realizar mediciones de Fase con el Receptor y la Antena?</h4>
@@ -58,21 +56,21 @@
       <input type="radio" name="q4" value="c">c- Con la Antena se puede, el Receptor entrega Código y la Antena provee de Observable de Fase al Receptor
     </div>
     <div class="borde">
-      <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIAOVE-A y GIOVE-B "Galileo In-Orbit Validation, ¿Cúal fúe el porpósito de su misión?</h4>
+      <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIOVE-A y GIOVE-B "Galileo In-Orbit Validation, ¿Cúal fúe el propósito de su misión?</h4>
       <input type="radio" name="q5" value="a">a- Asegurar y mantener la frecuencia GALILEO con la Unión Internacional de Telecomunicaciones "ITU"
       <hr>
       <input type="radio" name="q5" value="b">b- Validar las tecnologías que empleará la constelación GALILEO
       <hr>
       <input type="radio" name="q5" value="c">c- Monitorear el entorno "MEO"
       <hr>
-      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario. Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita y Asegurar los objetivos de la misión, y ambos proporcionar Capacidades complementarias.
+      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario. Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita y Asegurar los objetivos de la misión, y ambos proporcionar capacidades complementarias.
       <hr>
       <input type="radio" name="q5" value="e">e- Todas las alternativas son correctas 
     </div>
     <div class="borde">
-      <h4>6- ¿Cúales son las Longitudes de Onda expresadas en centímetros de las Frecuencias L1 y L2?</h4>
+      <h4>6- ¿Cúales son las Longitudes de Onda de las Frecuencias L1 y L2?</h4>
       <hr>
-      <input type="radio" name="q6" value="a">a- L1 y L2 = 24cm
+      <input type="radio" name="q6" value="a">a- L1 y L2 = 24m
       <hr>
       <input type="radio" name="q6" value="b">b- L1= 24cm y L2= 19cm
       <hr>
@@ -101,7 +99,7 @@
       <hr>
       <input type="radio" name="q9" value="a">a- El Segmento Espacial se comunica con la Antena CORS
       <hr>
-      <input type="radio" name="q9" value="b">b- El receptor GNSS nunca se comunica con el Segmento Espacial T
+      <input type="radio" name="q9" value="b">b- El receptor GNSS nunca se comunica con el Segmento Espacial
       <hr>
       <input type="radio" name="q9" value="c">c- El Segmento Espacial se comunica con el Receptor GPS
     </div>
