--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <input type="radio" name="q4" value="c">c- Con la Antena se puede, el Receptor entrega Código y la Antena provee de Observable de Fase al Receptor
     </div>
     <div class="borde">
-      <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIOVE-A y GIOVE-B "Galileo In-Orbit Validation, ¿Cúal fúe el propósito de su misión?</h4>
+      <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIOVE-A y GIOVE-B "Galileo In-Orbit Validation", ¿Cúal fúe el propósito de su misión?</h4>
       <input type="radio" name="q5" value="a">a- Asegurar y mantener la frecuencia GALILEO con la Unión Internacional de Telecomunicaciones "ITU"
       <hr>
       <input type="radio" name="q5" value="b">b- Validar las tecnologías que empleará la constelación GALILEO
